Archive2/db/0f3eb101457a49/output
main.cpp: In function 'int main()':
main.cpp:42:24: error: cannot bind 's' lvalue to 's&&'
     foo<s>::call(s_test);
                        ^
main.cpp:8:17: error:   initializing argument 1 of 'static void foo<Args>::call(Args&& ...) [with Args = {s}]'
     static void call(Args&&... args)
                 ^
